// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getPathRelativeToTarget should resolve .. paths 1`] = `"../../../index.ts"`;

exports[`getPathRelativeToTarget should resolve ./ paths 1`] = `"./target1.ts"`;

exports[`getPathRelativeToTarget should throw for invalid paths 1`] = `
Object {
  "data": [Error: Cannot find module './targe1' from '/Users/I0459/scratch/personal/ellipsoid/server/#/utils/file/__fixtures__'],
  "level": 0,
  "message": "Could not get path relative to target",
  "stack": undefined,
}
`;

exports[`readFileToString$ should not work with something which is not a file 1`] = `
Object {
  "data": Object {
    "error": "{\\"errno\\":-21,\\"code\\":\\"EISDIR\\",\\"syscall\\":\\"read\\"}",
    "fileName": "/Users/I0459/scratch/personal/ellipsoid/server/#/utils/file",
  },
  "level": 0,
  "message": "Cannot read file",
  "stack": undefined,
}
`;
